--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -97,7 +97,9 @@
 }
 
 .selected {
-    border-width: 1px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: red;
 }
 
 .rubleicon {
