Observatory: UI state updates
Update Observatory card status in setup and after player actions with
masking div to show it disabled.

--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -81,6 +81,16 @@
 	z-index: 99;
 }
 
+.maskcard
+{
+    width: 96px;
+    height: 150px;
+    background-color: white;
+    opacity: 0.5;
+    filter: alpha(opacity=20); /* IE8 */
+    display: none;
+}
+
 .possibleMove
 {
 	background-color: white;
