--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -68,22 +68,30 @@
 */
 
 #board {
-	width: 1012px;
-	height: 342px;
-	background-image: url('img/board.jpg');
+	width: 740px;
+	height: 480px;
+	background-image: url('img/board_full.jpg');
 	position: relative;
 }
 
+.discard {
+    position: absolute;
+    width: 70px;
+    height: 112px;
+    left: 47px;
+    top: 26px;
+}
+
 .square {
-	width: 96px;
-	height: 150px;
+	width: 70px;
+	height: 112px;
 	position: absolute;
 }
 
 .maskcard
 {
-    width: 96px;
-    height: 150px;
+    width: 70px;
+    height: 112px;
     background-color: white;
     opacity: 0.5;
     filter: alpha(opacity=20); /* IE8 */
@@ -100,8 +108,8 @@
 
 .card {
     position: absolute;
-    width: 96px;
-    height: 150px;
+    width: 70px;
+    height: 112px;
     background-image: url('img/cards.jpg');
 }
 
@@ -122,7 +130,6 @@
     width: 45px;
     height: 24px;
     background-image: url('img/ruble.jpg');
-    margin: 0 0 15px 0;
 }
 
 .iconspan {
@@ -144,25 +151,24 @@
 
 .nolinebreak {
     display: inline-block;
-    text-align: center;
-    vertical-align: middle;
 }
 
 .cardicon {
-    width: 15px;
-    height: 24px;
-    background-image: url('img/cardicon.jpg');
+    width: 32px;
+    height: 32px;
+    background-image: url('img/cardicon.png');
 }
 
 .cardback {
     position: relative;
-    width: 30px;
-    height: 48px;
-    background-image: url('img/cardbacks.jpg');
+    width: 70px;
+    height: 112px;
+    background-image: url('img/cardbacks_big.jpg');
 }
 
 .deck {
     margin: 10px 30px 10px 10px;
+    position: absolute;
 }
 
 .token {
@@ -193,9 +199,9 @@
 
 .activecard {
  position:absolute;
- top:10px;
- left:28px;
- width:60px;
+ top:7px;
+ left:20px;
+ width:48px;
  text-align:center;
  font-size:60%;
  font-weight:bold;
@@ -206,7 +212,7 @@
 
 .cardart {
  display:inline-block;
- background-image:url('img/cards.jpg');
+ background-image:url('img/cards_big.jpg');
  width:96px;
  height:150px;
  margin:10px;
