Indicate empty deck with red overlay
More visible indication of game ending. Deck and counter now turn red
when last card is drawn. Also fix couple issues from previous commit.

--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -159,11 +159,15 @@
     background-image: url('img/cardicon.png');
 }
 
-.cardback {
+.deck {
     position: absolute;
     width: 70px;
     height: 112px;
     background-image: url('img/cardbacks_big.jpg');
+}
+
+.emptydeck {
+    background: rgba(200,0,0,0.4);
 }
 
 .deckcount {
