Increase Observatory focus area
Make it so full Observatory card can be clicked to use instead of just
tiny link, and add translation to link text.

--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -98,6 +98,13 @@
     display: none;
 }
 
+.clickcard
+{
+    width: 70px;
+    height: 112px;
+    cursor: pointer;
+}
+
 .possibleMove
 {
 	background-color: white;
