Improve Observatory display
Add error message when clicked at wrong and time slightly darken mask
when disabled

--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -92,8 +92,7 @@
 {
     width: 70px;
     height: 112px;
-    background-color: white;
-    opacity: 0.5;
+    background-color: rgba(255, 228, 196, 0.75);
     filter: alpha(opacity=20); /* IE8 */
     display: none;
 }
