WIP: Client states
Add args function to generate all possible moves for player turn. Handle
card selection as client state. Implement basic add/buy/play actions.
Refactor for simplicity and consistency with new helper functions in
client and the same constants on both server and client.

--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -95,10 +95,12 @@
 
 .stp_selected {
     border: 3px solid red ! important;
+    border-radius: 10px;
 }
 
 .stp_selectable {
     border: 3px solid blue ! important;
+    border-radius: 10px;
     cursor: pointer;
 }
 
