Auto pass banner message and cancel
Add banner message to alert player when they are automatically passing,
and provide action for them to cancel and resume playing on their next
turn.

--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -309,7 +309,7 @@
     vertical-align: middle;
 }
 
-.stp_publisher_msg {
+.stp_banner_msg {
     display: inline-block;
     text-align: center;
     font-size: 110%;
