Make end game OBVIOUS
Add big label to board when final round is triggered and keep it there.
Change empty pile tooltip to be more explicit.

--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -286,6 +286,13 @@
     position: absolute;
 }
 
+#stp_final_label {
+    width: 200px;
+    left: 590px;
+    top: 10px;
+    color: red;
+}
+
 .stp_token {
     width: 32px;
     height: 32px;
