--- a/saintpetersburg.css
+++ b/saintpetersburg.css
@@ -53,16 +53,88 @@
     flex-wrap: wrap;
 }
 
-#stp_gameboard {
+#stp_gameboard_width_sizer {
     width: 740px;
-    height: 480px;
-    background-image: url('img/board_full.jpg');
-    position: relative;
     margin: auto;
 }
 
+#stp_gameboard_height_sizer {
+    width: 100%;
+    padding-bottom: 64.8648649%;
+    position: relative;
+    margin: 0px;
+}
+
+.stp_2nd_edition #stp_gameboard_height_sizer {
+    padding-bottom: 65.3425213%;
+}
+
+#stp_gameboard {
+    width: 100%;
+    height: 100%;
+    background-image: url('img/board_full.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    margin: 0px;
+}
+
+.stp_2nd_edition #stp_gameboard {
+    background-image: url('img/board2.jpg');
+}
+
+#stp_phase_label {
+    left: 41%;
+    top: 2%;
+}
+
+.stp_2nd_edition #stp_phase_label {
+    left: 41%;
+    top: 1.5%;
+}
+
+#stp_count_Worker {
+    left: 230px;
+    top: 128px;
+}
+
+.stp_2nd_edition #stp_count_Worker {
+    left: 28.2%;
+    top: 24.5%;
+}
+
+#stp_count_Building {
+    left: 372px;
+    top: 128px;
+}
+
+.stp_2nd_edition #stp_count_Building {
+    left: 48.2%;
+    top: 24.5%;
+}
+
+#stp_count_Aristocrat {
+    left: 517px;
+    top: 128px;
+}
+
+.stp_2nd_edition #stp_count_Aristocrat {
+    left: 68.2%;
+    top: 24.5%;
+}
+
+#stp_count_Trading {
+    left: 661px;
+    top: 128px;
+}
+
+.stp_2nd_edition #stp_count_Trading {
+    left: 88.2%;
+    top: 24.5%;
+}
+
 /* smallest screen */
-#myhand_wrap {
+#stp_myhand_wrap {
     width: 100%;
     height: 145px;
     margin-bottom: 0px;
@@ -70,22 +142,30 @@
 
 /* medium screen */
 @media only screen and (min-width: 1185px) {
-    #stp_gameboard {
+    #stp_board_sizer {
         margin-right: 10px;
     }
 
-    #myhand_wrap {
+    #stp_myhand_wrap {
         width: 150px;
         height: 260px;
         margin-top: 200px;
         margin-right: auto;
     }
+    .stp_2nd_edition #stp_myhand_wrap {
+        width: 157px;
+    }
 }
 
 /* large screen */
 @media only screen and (min-width: 1340px) {
-    #myhand_wrap {
+    #stp_myhand_wrap {
         width: 300px;
+        height: 145px;
+        margin-top: 315px;
+    }
+    .stp_2nd_edition #stp_myhand_wrap {
+        width: 313px;
         height: 145px;
         margin-top: 315px;
     }
@@ -93,12 +173,30 @@
 
 
 
-.stp_discard {
-    position: absolute;
+.stp_square, .stp_discard, .stp_maskcard, .stp_clickcard, .stp_card, .stp_deck, .stp_cardart_small {
     width: 70px;
     height: 112px;
+}
+
+.stp_2nd_edition .stp_square, .stp_2nd_edition .stp_discard, .stp_2nd_edition .stp_clickcard, .stp_2nd_edition .stp_card, .stp_2nd_edition .stp_deck {
+    width: 9.32%;
+    height: 21.84%;
+}
+
+.stp_2nd_edition .stp_maskcard, .stp_2nd_edition .stp_clickcard, .stp_2nd_edition .stp_cardart_small {
+    width: 73.18px;
+    height: 112px;
+}
+
+.stp_discard {
+    position: absolute;
     left: 47px;
     top: 26px;
+}
+
+.stp_2nd_edition .stp_discard {
+    left: 2.31%;
+    top: 6.45%;
 }
 
 .stp_aritable {
@@ -107,6 +205,13 @@
     height: 52px;
     left: 7px;
     top: 156px;
+}
+
+.stp_2nd_edition .stp_aritable {
+    width: 25.54%;
+    height: 8.31%;
+    left: 2.19%;
+    top: 88.9%;
 }
 
 .stp_aritooltip {
@@ -131,14 +236,10 @@
 }
 
 .stp_square {
-    width: 70px;
-    height: 112px;
     position: absolute;
 }
 
 .stp_maskcard {
-    width: 70px;
-    height: 112px;
     background-color: rgba(255, 228, 196, 0.5);
     filter: alpha(opacity=50); /* IE8 */
     display: none;
@@ -147,24 +248,28 @@
 
 .stp_clickcard
 {
-    width: 70px;
-    height: 112px;
     cursor: pointer;
 }
 
 .stp_card {
     position: absolute;
-    width: 70px;
-    height: 112px;
     background-image: url('img/cards.png');
+    background-size: 1000%;
     cursor: pointer;
     box-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
-    border-radius: 10px;
+    border-radius: 14.3% / 8.93%;
+}
+
+.stp_2nd_edition .stp_card {
+    background-image: url('img/cards2.jpg');
+    box-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
+    border-radius: 14.3% / 9.33%;
 }
 
 .stockitem {
     box-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
     border-radius: 10px;
+    background-size: 1000%;
 }
 
 .stp_selected {
@@ -221,6 +326,10 @@
     top: 5px;
 }
 
+.stp_2nd_edition [class^="stp_cardicon_"] {
+    background-image: url('img/cardbacks2.jpg');
+}
+
 .stp_cardicon_Worker {
     background-position: 0px 0px;
 }
@@ -239,32 +348,57 @@
 
 .stp_deck {
     position: absolute;
-    width: 70px;
-    height: 112px;
     top: 40px;
     background-image: url('img/cardbacks_big.jpg');
+    background-size: 400%;
     box-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
+    border-radius: 6px;
+}
+
+.stp_2nd_edition .stp_deck {
+    top: 6.3%;
+    background-image: url('img/cardbacks2.jpg');
+    background-size: 900%;
     border-radius: 6px;
 }
 
 .stp_deck_worker {
     left: 185px;
-    background-position: 0px 0px;
+    background-position: 0% 0%;
+}
+
+.stp_2nd_edition .stp_deck_worker {
+    left: 18.5%;
 }
 
 .stp_deck_building {
     left: 327px;
-    background-position: -70px 0px;
+    background-position: 33.33% 0%;
+}
+
+.stp_2nd_edition .stp_deck_building {
+    left: 38.5%;
+    background-position-x: 12.5%;
 }
 
 .stp_deck_aristocrat {
     left: 473px;
-    background-position: -140px 0px;
+    background-position: 66.67% 0%;
+}
+
+.stp_2nd_edition .stp_deck_aristocrat {
+    left: 58.5%;
+    background-position-x: 25%;
 }
 
 .stp_deck_trading {
     left: 617px;
-    background-position: -210px 0px;
+    background-position: 100% 0%;
+}
+
+.stp_2nd_edition .stp_deck_trading {
+    left: 78.6%;
+    background-position-x: 37.5%;
 }
 
 .stp_emptydeck {
@@ -288,9 +422,13 @@
 
 #stp_final_label {
     width: 200px;
-    left: 590px;
-    top: 10px;
+    left: 79.73%;
+    top: 2%;
     color: red;
+}
+
+.stp_2nd_edition #stp_final_label {
+    top: 1.5%;
 }
 
 .stp_token {
@@ -396,6 +534,7 @@
 .stp_cardart {
     display:inline-block;
     background-image:url('img/cards_big.jpg');
+    background-size: 1000%;
     width:96px;
     height:150px;
     margin:10px;
@@ -403,13 +542,23 @@
     border-radius:18px
 }
 
+.stp_2nd_edition .stp_cardart {
+    background-image:url('img/cards2.jpg');
+    width:130.68px;
+    height:200px;
+}
+
 .stp_cardart_small {
-    width: 70px;
-    height: 112px;
     background-image: url('img/cards.png');
+    background-size: 1000%;
     margin: 1px;
     border: 1px solid black;
-    border-radius: 10px
+    border-radius: 14.3% / 8.93%;
+}
+
+.stp_2nd_edition .stp_cardart_small {
+    background-image: url('img/cards2.jpg');
+    border-radius: 14.3% / 9.33%;
 }
 
 .stp_cardtooltip {
